fix gpu consumption bug: remove ui blurring - backdrop-filter: blur(18px);

--- a/style.css
+++ b/style.css
@@ -349,7 +349,6 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: center;
-    backdrop-filter: blur(5px);
 }
 
 .toggle-button:hover {
@@ -499,15 +498,15 @@ html, body {
 
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
-    
+
     padding: 4px;
     font-size: 12px;
     text-align: center;
-    
+
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    
+
     /* Prevents the label from interfering with mouse events on the cell */
     pointer-events: none;
 }
